--- a/stack.env
+++ b/stack.env
@@ -2,8 +2,8 @@
 FRONTEND_PORT=3000
 
 # API Configuration
-NEXT_PUBLIC_API_URL=http://localhost:4000/graphql
-NEXT_PUBLIC_UPLOAD_URL=http://localhost:4000/upload
+NEXT_PUBLIC_CMS_GRAPHQL_URL=https://cms.protekauto.ru/api/graphql
+NEXT_PUBLIC_UPLOAD_URL=https://cms.protekauto.ru/upload
 
 # Build Configuration
 NODE_ENV=production 
