feat: добавить переменную NEXT_PUBLIC_MAINTENANCE_MODE в stack.env для управления режимом обслуживания в продакшене

--- a/stack.env
+++ b/stack.env
@@ -5,5 +5,9 @@ FRONTEND_PORT=3000
 NEXT_PUBLIC_CMS_GRAPHQL_URL=https://cms.protekauto.ru/api/graphql
 NEXT_PUBLIC_UPLOAD_URL=https://cms.protekauto.ru/upload
 
+# Maintenance Mode Configuration
+# Set to 'true' to enable maintenance mode with password protection
+NEXT_PUBLIC_MAINTENANCE_MODE=false
+
 # Build Configuration
 NODE_ENV=production 
