--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       args:
         NEXT_PUBLIC_CMS_GRAPHQL_URL: ${NEXT_PUBLIC_CMS_GRAPHQL_URL:-http://localhost:4000/graphql}
         NEXT_PUBLIC_UPLOAD_URL: ${NEXT_PUBLIC_UPLOAD_URL:-http://localhost:4000/upload}
+        NEXT_PUBLIC_MAINTENANCE_MODE: ${NEXT_PUBLIC_MAINTENANCE_MODE:-false}
     container_name: protekauto-frontend
     ports:
       - "3001:3000"
@@ -15,6 +16,7 @@ services:
       - NODE_ENV=production
       - NEXT_PUBLIC_CMS_GRAPHQL_URL=${NEXT_PUBLIC_CMS_GRAPHQL_URL:-http://localhost:4000/graphql}
       - NEXT_PUBLIC_UPLOAD_URL=${NEXT_PUBLIC_UPLOAD_URL:-http://localhost:4000/upload}
+      - NEXT_PUBLIC_MAINTENANCE_MODE=${NEXT_PUBLIC_MAINTENANCE_MODE:-false}
     restart: unless-stopped
     networks:
       - protekauto-network
