feat: обновить конфигурацию окружения и компоненты профиля, добавить поддержку Yandex Maps API, улучшить обработку данных и интерфейс для юридических лиц

--- a/stack.env
+++ b/stack.env
@@ -7,4 +7,7 @@ NEXT_PUBLIC_UPLOAD_URL=https://cms.protekauto.ru/upload
 NEXT_PUBLIC_MAINTENANCE_MODE=true
 
 # Build Configuration
-NODE_ENV=production 
+NODE_ENV=production
+
+# Yandex Maps API
+NEXT_PUBLIC_YANDEX_MAPS_API_KEY=7370dc42-acbd-463c-8302-749f9c6ec144 
